<resources>
    <string name="app_name">GoToChurchMobileProject</string>
    <string name="title_activity_gtc__welcome">Welcome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_gtc__auto_login">Sign in</string>
    <string name="hello_blank_fragment">Fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_gtc__maps">Map</string>

    <!-- SignUpLayOut-->
    <string name="signUpName">Name</string>
    <string name="signUpBirthday">Birthday</string>
    <string name="signUpEmail">Email</string>
    <string name="signUpPhone">Phone Number</string>
    <string name="newChurchResponsible">Responsible</string>
    <string name="newChurchName">Church Name</string>
    <string name="newChurchAdjunt">Adjunt</string>
    <string name="newChurchPhone">Phone Number</string>
    <string name="SignIn">Sign In</string>
    <string name="Register">Register</string>
    <string name="save">Save</string>
    <string name="continuar">Continue</string>
    <string name="next">Next</string>
    <string name="address">Address</string>
    <string name="finish">Finish Register</string>
    <string name="streetName">Street Name</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="homeNumber">Home Number</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="quick_acsess">Quick Access</string>
    <string name="favorits">Favorits</string>
    <string name="action_out">Sing out</string>
    <string name="todo" />
    <string name="seat">Seat</string>
    <string name="title_activity_gtc__lista_setores">Sectors</string>
    <string name="title_activity_gtc__church_list">Churchs</string>
    <string name="title_activity_gtc__lista_area">Areas</string>
    <string name="about">About</string>
    <string name="title_activity_gtc__new_church">New Church</string>
    <!-- SignUpLayOut-->
</resources>
