<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.helio.gotochurchmobileproject.GTC_SignUpActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

</android.support.design.widget.AppBarLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingBottom="20dp">

    <ImageView
        android:id="@+id/imageView_signUp_Screen"
        android:layout_width="256dp"
        android:layout_height="275dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/iconchurchtoggle" />

    <EditText
        android:id="@+id/editText_city"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/editText_district"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/district"
        android:inputType="textPersonName"
         />

    <EditText
        android:id="@+id/editText_homeNumber"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/homeNumber"
        android:inputType="textLongMessage"
        />

    <EditText
        android:id="@+id/editText_streetName"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/streetName"
        android:inputType="textLongMessage"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save" />
    </LinearLayout>
</ScrollView>


</LinearLayout>

</android.support.constraint.ConstraintLayout>
