<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.helio.gotochurchmobileproject.GTC_SignUpActivity"
    >



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/imageView_signUp_Screen"
                android:layout_width="256dp"
                android:layout_height="275dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/iconchurchtoggle"/>

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/newChurchName"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp" />

            <Spinner
                android:id="@+id/spin_responsible"
                android:layout_width="210dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@android:drawable/btn_dropdown"
                android:hint="@string/newChurchResponsible"
                android:spinnerMode="dropdown"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/editText_seat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/seat"
                android:inputType="number"
                android:layout_marginBottom="25dp"
                />

            <Button
                android:id="@+id/btContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/continuar"
                />


        </LinearLayout>
    </ScrollView>


</LinearLayout>

</android.support.constraint.ConstraintLayout>
