<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.helio.gotochurchmobileproject.GTC_SignUpActivity">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpName"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="45dp" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="79dp" />

    <TextView
        android:id="@+id/textView_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpBirthday"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="160dp" />

    <EditText
        android:id="@+id/editText_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:text="Name"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpEmail"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="255dp" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textWebEmailAddress"
        android:text="Name"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="283dp" />

    <TextView
        android:id="@+id/textView_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpPhone"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="351dp" />

    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:text="Name"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="387dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_action_name_forward"
        tools:layout_editor_absoluteX="312dp"
        tools:layout_editor_absoluteY="479dp" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_action_name"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="471dp" />

</android.support.constraint.ConstraintLayout>
